--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,7 +1,7 @@
 <ul>
 <% @songs.each do |song| %>
   <li><%= link_to song.title, song_path(song) %></li>
-  <h3><%= display_artist @song %></h3>
+  <li><%= display_artist @song %></li>
 <% end %>
 </ul>
 <br>
